[gd_scene load_steps=13 format=3 uid="uid://dg64ibilu76bl"]

[ext_resource type="Script" path="res://scenes/mission_popup.gd" id="1_12qlk"]
[ext_resource type="Texture2D" uid="uid://ci70ifr5xn0sb" path="res://assets/GUI/Popup/UpgradePopupLocked.png" id="1_ga6jj"]
[ext_resource type="Texture2D" uid="uid://cmbot3uik7w04" path="res://assets/GUI/Popup/Cards/River.png" id="2_sguim"]
[ext_resource type="Texture2D" uid="uid://cq0fgbjiudrkv" path="res://assets/GUI/Popup/Cards/Hill.png" id="3_3u18q"]
[ext_resource type="Texture2D" uid="uid://dsi4hnla4uh7l" path="res://assets/GUI/Popup/Cards/Mine.png" id="4_xscf1"]
[ext_resource type="Texture2D" uid="uid://ckpkra80pghcv" path="res://assets/GUI/Popup/Cards/Desert.png" id="5_vjppl"]
[ext_resource type="Texture2D" uid="uid://bsi03y375oc3r" path="res://assets/GUI/Popup/Cards/Mountain.png" id="6_wnye1"]
[ext_resource type="Texture2D" uid="uid://28pobcsk6tg4" path="res://assets/GUI/Popup/Cards/WaterPlant.png" id="7_8b4te"]
[ext_resource type="Texture2D" uid="uid://c4amx1f0mqw3d" path="res://assets/GUI/Popup/Cards/D_Mine.png" id="7_bwagb"]
[ext_resource type="Texture2D" uid="uid://b116jpevmay1f" path="res://assets/GUI/Popup/Cards/Refinery.png" id="8_dq4w2"]
[ext_resource type="Texture2D" uid="uid://by83m8lplu4np" path="res://assets/GUI/Popup/Cards/Desert_Sands.png" id="10_vji3o"]
[ext_resource type="Texture2D" uid="uid://ctcl4qf0y2mxj" path="res://assets/GUI/Popup/Cards/Solar_Panel.png" id="11_bto3s"]

[node name="Panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12qlk")

[node name="Popup" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_ga6jj")

[node name="TR_DisplayRiver" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("2_sguim")
metadata/_edit_use_anchors_ = true

[node name="TR_DispsplayWaterPlant" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("7_8b4te")
metadata/_edit_use_anchors_ = true

[node name="TR_DisplayHill" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("3_3u18q")
metadata/_edit_use_anchors_ = true

[node name="TR_DisplayMine" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("4_xscf1")
metadata/_edit_use_anchors_ = true

[node name="TR_DisplayMountain" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("6_wnye1")
metadata/_edit_use_anchors_ = true

[node name="TR_DisplayDesertMine" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("7_bwagb")
metadata/_edit_use_anchors_ = true

[node name="TR_DisplayDesert" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("5_vjppl")
metadata/_edit_use_anchors_ = true

[node name="TR_DisplayRefinery" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("8_dq4w2")
metadata/_edit_use_anchors_ = true

[node name="TR_DisplayDesertSands" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("10_vji3o")
metadata/_edit_use_anchors_ = true

[node name="TR_DisplaySolarPanel" type="TextureRect" parent="Popup"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.075
anchor_right = 0.87452
anchor_bottom = 0.53521
offset_right = 0.0192184
offset_bottom = -0.408413
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.999359, 1.02269)
texture = ExtResource("11_bto3s")
metadata/_edit_use_anchors_ = true

[node name="UpgradeButton" type="Button" parent="Popup"]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.8
metadata/_edit_use_anchors_ = true
